src/snapshots/raoul__tests__parse_ast_is_ok-12.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(0, 0, 1, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    STRING: [
                        2500,
                    ],
                    FLOAT: [],
                    BOOL: [],
                    INT: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1500,
                        data_type: STRING,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                },
                first_quad: 0,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(0, 0, 0, 0),
            variables: {},
        },
    },
    memory: ConstantMemory({FLOAT: [], INT: [], STRING: [], BOOL: []}),
    pointer_memory: PointerMemory {
        counter: 4000,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     1    ,
        Read       -     -     2500 ,
        Assignment 2500  -     1500 ,
        Print      1500  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
