src/snapshots/raoul__tests__parse_ast_is_ok-13.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(3, 0, 0, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    BOOL: [
                        2750,
                    ],
                    FLOAT: [],
                    STRING: [],
                    INT: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1001,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                    "b": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "b",
                    },
                    "c": Variable {
                        address: 1002,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "c",
                    },
                },
                first_quad: 0,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(0, 0, 0, 0),
            variables: {},
        },
    },
    memory: ConstantMemory({INT: [5, 1], STRING: [], FLOAT: [], BOOL: []}),
    pointer_memory: PointerMemory {
        counter: 4000,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     1    ,
        Assignment 3000  -     1000 ,
        Assignment 3001  -     1001 ,
        Sum        1000  3001  2000 ,
        Lte        1001  2000  2750 ,
        GotoF      2750  -     11   ,
        Assignment 1001  -     1002 ,
        Print      1002  -     -    ,
        PrintNl    -     -     -    ,
        Inc        -     -     1001 ,
        Goto       -     -     3    ,
        Print      1001  -     -    ,
        Print      1000  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
