src/snapshots/raoul__tests__parse_ast_is_ok-17.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(2, 0, 0, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    STRING: [],
                    FLOAT: [],
                    BOOL: [],
                    INT: [],
                }),
                variables: {
                    "b": Variable {
                        address: 1001,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "b",
                    },
                    "a": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                },
                first_quad: 0,
            },
            "my_function": Function {
                args: [],
                local_addresses: AddressManager(1, 0, 0, 0),
                name: "my_function",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    FLOAT: [],
                    INT: [],
                    BOOL: [],
                    STRING: [],
                }),
                variables: {
                    "b": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "b",
                    },
                },
                first_quad: 1,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(1, 0, 0, 0),
            variables: {
                "c": Variable {
                    address: 0,
                    data_type: INT,
                    dimensions: (
                        None,
                        None,
                    ),
                    name: "c",
                },
            },
        },
    },
    memory: ConstantMemory({FLOAT: [], INT: [2, 1], STRING: [], BOOL: []}),
    pointer_memory: PointerMemory {
        counter: 4000,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     3    ,
        Assignment 3000  -     1000 ,
        EndProc    -     -     -    ,
        Assignment 3001  -     1000 ,
        Assignment 3000  -     0    ,
        Assignment 3000  -     1000 ,
        Assignment 3001  -     1001 ,
        Print      1000  -     -    ,
        Print      0     -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
