src/snapshots/raoul__tests__parse_ast_is_ok-19.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(3, 0, 0, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    STRING: [],
                    INT: [],
                    BOOL: [
                        2750,
                    ],
                    FLOAT: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "a",
                    },
                    "b": Variable {
                        address: 1001,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "b",
                    },
                    "c": Variable {
                        address: 1002,
                        data_type: INT,
                        dimensions: (
                            None,
                            None,
                        ),
                        name: "c",
                    },
                },
                first_quad: 0,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(0, 0, 0, 0),
            variables: {},
        },
    },
    memory: ConstantMemory({STRING: [], FLOAT: [], INT: [1, 2, 3], BOOL: []}),
    pointer_memory: PointerMemory {
        counter: 4000,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     1    ,
        Lt         3000  3001  2750 ,
        GotoF      2750  -     5    ,
        Assignment 3000  -     1000 ,
        Goto       -     -     10   ,
        Lt         3001  3002  2750 ,
        GotoF      2750  -     9    ,
        Assignment 3001  -     1000 ,
        Goto       -     -     10   ,
        Assignment 3002  -     1000 ,
        Gt         3000  3001  2750 ,
        GotoF      2750  -     14   ,
        Assignment 3000  -     1001 ,
        Goto       -     -     15   ,
        Assignment 3001  -     1001 ,
        Eq         3000  3000  2750 ,
        GotoF      2750  -     18   ,
        Assignment 3000  -     1002 ,
        Print      1000  -     -    ,
        Print      1001  -     -    ,
        Print      1002  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
