src/snapshots/raoul__tests__parse_ast_is_ok-4.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(3, 0, 0, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    FLOAT: [],
                    BOOL: [],
                    STRING: [],
                    INT: [],
                }),
                variables: {
                    "a": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            Some(
                                3,
                            ),
                            None,
                        ),
                        name: "a",
                    },
                },
                first_quad: 0,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(0, 0, 0, 0),
            variables: {},
        },
    },
    memory: ConstantMemory({STRING: [], FLOAT: [], INT: [1000, 0, 3, 1], BOOL: []}),
    pointer_memory: PointerMemory {
        counter: 4004,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     1    ,
        Ver        3001  3002  -    ,
        Sum        3000  3001  4000 ,
        Assignment 3001  -     4000 ,
        Ver        3001  3002  -    ,
        Sum        3000  3001  4001 ,
        Minus      4001  3003  2000 ,
        Ver        2000  3002  -    ,
        Sum        3000  2000  4002 ,
        Assignment 3001  -     4002 ,
        Ver        3001  3002  -    ,
        Sum        3000  3001  4003 ,
        Print      4003  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
