src/snapshots/raoul__tests__parse_ast_is_ok-5.snap
---
source: src/tests.rs
expression: quad_manager
---
QuadrupleManager {
    function_name: "main",
    jump_list: [],
    missing_return: false,
    dir_func: DirFunc {
        functions: {
            "main": Function {
                args: [],
                local_addresses: AddressManager(3, 0, 0, 0),
                name: "main",
                return_type: VOID,
                temp_addresses: TempAddressManager({
                    INT: [],
                    FLOAT: [],
                    STRING: [],
                    BOOL: [],
                }),
                variables: {
                    "c": Variable {
                        address: 1000,
                        data_type: INT,
                        dimensions: (
                            Some(
                                3,
                            ),
                            None,
                        ),
                        name: "c",
                    },
                },
                first_quad: 0,
            },
        },
        global_fn: GlobalScope {
            addresses: AddressManager(0, 0, 0, 0),
            variables: {},
        },
    },
    memory: ConstantMemory({INT: [1000, 0, 3, 1, 2], STRING: [], BOOL: [], FLOAT: []}),
    pointer_memory: PointerMemory {
        counter: 4008,
        pointers: {},
    },
    quad_list: [
        Goto       -     -     1    ,
        Ver        3001  3002  -    ,
        Sum        3000  3001  4000 ,
        Assignment 3003  -     4000 ,
        Ver        3003  3002  -    ,
        Sum        3000  3003  4001 ,
        Assignment 3004  -     4001 ,
        Ver        3004  3002  -    ,
        Sum        3000  3004  4002 ,
        Assignment 3002  -     4002 ,
        Ver        3001  3002  -    ,
        Sum        3000  3001  4003 ,
        Ver        3003  3002  -    ,
        Sum        3000  3003  4004 ,
        Ver        3004  3002  -    ,
        Sum        3000  3004  4005 ,
        Ver        3003  3002  -    ,
        Sum        3000  3003  4006 ,
        Ver        3001  3002  -    ,
        Sum        3000  3001  4007 ,
        Print      4003  -     -    ,
        Print      4004  -     -    ,
        Print      4005  -     -    ,
        Print      4006  -     -    ,
        Print      4007  -     -    ,
        PrintNl    -     -     -    ,
        End        -     -     -    ,
    ],
}
